--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,107 +1,94 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
+form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 15rem 35rem ;
+    padding: 1rem;
+    border: 5px solid #0a192f;
+    border-radius: 30px;
   }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+  
+  input{
+    margin:1rem 0
   }
-}
+  
+  .name-input{
+    font-size: 1.3rem;
+   
+    font-family:'Courier New', Courier, monospace;
+  }
+  
+  .name-input:hover{
+    box-sizing: border-box;
+    width: 20rem;
+    box-shadow: 3px 3px 3px 3px #0a192f ;
+    cursor: pointer;
+  }
+  
+  .email-input{
+    font-size: 1.3rem;
+
+    font-family:'Courier New', Courier, monospace; 
+  }
+  
+  .email-input:hover{
+    box-sizing: border-box;
+    width: 20rem;
+    box-shadow: 3px 3px 3px 3px #0a192f ;
+    cursor: pointer;
+  }
+  
+  .submit-input{
+    font-size: 1rem;
+    font-family:'Courier New', Courier, monospace;
+    border: 5px lightgrey outset;
+   
+  }
+  
+  .submit-input:hover{
+    box-sizing: border-box;
+    box-shadow: 3px 3px 3px 3px  rgba(18, 18, 18, 0.841);
+    cursor: pointer;
+  }
+
+  .user-btn{
+    text-decoration: none;
+    border: 5px solid gainsboro;
+    padding: 0.3rem;
+    font-family:'Courier New', Courier, monospace;
+    color: black;
+  }
+  .user-btn:hover{
+    box-sizing: border-box;
+    box-shadow: 3px 3px 3px 3px #0a192f ;
+    
+  }
+
+  h2{
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 3rem;
+    text-align: center;
+    margin:5rem 40rem 0 0
+  }
+  
+  .user-names-container{
+    text-decoration: none;
+    color: #0a192f;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bolder;
+    font-size: 1.5rem;
+    text-align: center;
+    margin:5rem 30rem 0 0
+  }
+
+  .user-names{
+    text-decoration: none;
+    color: #0a192f;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bolder;
+    font-size: 1.5rem;
+  }
+
+  
+   
